--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,13 @@
   {% seo %}
   <!-- End SEO -->
 
+  <meta name="theme-color" content="#667eea">
+
+  <!-- Favicon -->
+  <link rel="icon" href="{{ '/logo.png' | relative_url }}" type="image/png">
+  <link rel="apple-touch-icon" href="{{ '/logo.png' | relative_url }}">
+  <link rel="shortcut icon" href="{{ '/logo.png' | relative_url }}" type="image/png">
+
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="/css/override.css">
 
