--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>نی‌نی‌نیت – لباس کودک با طرح‌های خاص و فانتزی</title>
 
   <!-- Begin SEO -->
   {% seo %}
